--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
     Email.send({
       Host :"smtp.gmail.com",
       Username : "codebysuziedjouko@gmail.com",
-      Password : "M@rcelle20001115",
+      Password : "M@rcelle*****",
       To : "suzie7djouko@gmail.com",
       From : document.getElementById("email").value,
       Subject : "New Contact From Enquiry",
