--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           programming, algorithms, and data structures
         </p>
        <div class="btn-con">
-        <a href="CV_Suzie.pdf" class="main-btn" target="_blank">
+        <a href="cv-Suzie.pdf" class="main-btn" target="_blank">
           <span class="btn-text">Download CV </span>
           <span class="btn-icon"><i class="fas fa-download"></i></span>
       </a>
@@ -65,7 +65,7 @@
                 are the subjects that matter to me and those in which I would like to improve in the future.
               </p>
               <div class="btn-con">
-                  <a href="CV_Suzie.pdf" class="main-btn" target="_blank">
+                  <a href="cv-Suzie.pdf" class="main-btn" target="_blank">
                       <span class="btn-text">Download CV </span>
                       <span class="btn-icon"><i class="fas fa-download"></i></span>
                   </a>
@@ -595,7 +595,7 @@
         </div>
         <button class="right-contact-submitbtn">Submit</button>
         <div class="submit-btn">
-          <a href="CV_Suzie.pdf" class="main-btn" target="_blank">
+          <a href="cv-Suzie.pdf" class="main-btn" target="_blank">
             <span class="btn-text"> Download CV </span>
             <span class="btn-icon"><i class="fas fa-download"></i></span>
         </a>
