modify 1st page image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="left-header">
           <div class="h-shape"></div>
           <div class="image">
-            <img src="image\me\me_30_preview_rev_1.png" alt="" />
+            <img src="image\me\me.jpg" alt="" />
           </div>
         </div>
         <div class="right-header">
@@ -37,12 +37,12 @@
           <br />
           <p>
             I am a young, highly motivated, and ambitious software developer
-            with a passion for technology. I have a good knowledge of
+            with a passion for  web technology. I have a good knowledge of
             programming languages and am familiar with various software
             development tools and methodologies.. I have experience with HTML,
             CSS, and the basics of Java and JavaScript. I am currently pursuing
             my bachelor's degree in computer science, which has given me a solid
-            foundation in programming, algorithms, and data structures
+            foundation in programming, algorithms, and data structures.
           </p>
           <div class="btn-con">
             <a href="cv-suzie.pdf" class="main-btn" target="_blank">
